k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nia-os
  namespace: nia-os
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  revisionHistoryLimit: 2
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: nia-os
  template:
    metadata:
      labels:
        app: nia-os
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        fsGroup: 1000
      imagePullSecrets:
        - name: registry
      containers:
        - name: nia-os
          image: ghcr.io/mmanchev23/nia-os:latest-1771756120
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "768Mi"
              cpu: "1000m"
        - name: qcluster
          image: ghcr.io/mmanchev23/nia-os:latest-1771756120
          imagePullPolicy: Always
          command: ["/bin/sh", "-c"]
          args:
            - python manage.py qcluster
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "768Mi"
              cpu: "1000m"
