k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nia-os
  namespace: nia-os
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: nia-os/key
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - nia-os.mmanchev23.dev
    secretName: tls
  rules:
  - host: nia-os.mmanchev23.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nia-os
            port:
              number: 80
